--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Contact Zoo </title>
+  <title>Contact Zoo</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4faff;
+      margin: 0;
+      color: #333;
+      text-align: center;
+    }
+    h1 { color: #0077cc; margin-top: 20px; }
+    p { font-size: 18px; margin-bottom: 20px; }
+    a { text-decoration: none; color: #0077cc; font-weight: bold; }
+    a:hover { color: #005fa3; }
+  </style>
 </head>
 <body>
-<header>
-  <nav>
-    <ul style="list-style:none; display:flex; gap:20px; justify-content:center; background:#0077cc; padding:15px; border-radius:8px;">
-      <li><a href="index.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Accueil</a></li>
-      <li><a href="contact.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Contact</a></li>
-      <li><a href="visiter.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Visiter</a></li>
-      <li><a href="acces.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Accès</a></li>
-      <li><a href="tarifs.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Tarifs</a></li>
-      <li><a href="activites.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Activités</a></li>
-      <li><a href="fauves.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Fauves</a></li>
-      <li><a href="photos.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Photos</a></li>
-      <li><a href="manger.html" style="text-decoration:none; color:white; font-weight:bold; font-size:18px; padding:8px 12px; border-radius:6px; transition:0.3s;">Manger</a></li>
-    </ul>
-  </nav>
-</header>
 
+<h1>Les contacts</h1>
+<p><strong>Adresse :</strong> 123 Chemin des Poissons, 20167 Villanova, Corse</p>
+<p><strong>Téléphone :</strong> +33 4 95 00 00 00</p>
 
-<center><H1>LES CONTACTS     </H1>
- <H1> <u>Adresse:</u>123 Chemin des Poissons, 20167 Villanova, Corse <br>
-  <u>Téléphone:</u>+33 4 95 00 00 00<br>
-  <u>Boite mail:</u>aquazoo2a@gmail.com
-</H1>
-<img src="tel.jpg"/>
+<p><a href="index.html">← Retour à l'accueil</a></p>
 
-  </center>
 </body>
-
-
-  
 </html>
